# git-mcp-server

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: tools.md
src/git_mcp_server/: __init__.py  server.py
src/git_mcp_server/tools/: __init__.py  branch.py  commit.py  remote.py  status.py  sync.py
src/git_mcp_server/utils/: __init__.py  errors.py  git_client.py
tests/: __init__.py  conftest.py  test_branch.py  test_commit.py  test_errors.py  test_git_client.py  test_remote.py  test_status.py  test_sync.py
tests/integration/: test_git_integration.py
